<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignUp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_gray"
            android:backgroundTint="@color/main_gray">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/noteflow_out" />

            <TextView
                android:id="@+id/textView6"
                style="@style/app_name_style"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/heder_titel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/edit_txt_style"
                            android:hint="@string/email"
                            app:startIconDrawable="@drawable/baseline_person_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/edit_txt_style"
                            android:hint="@string/email"
                            app:startIconDrawable="@drawable/baseline_email_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/re_email_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/edit_txt_style"
                            android:hint="@string/password"
                            app:endIconMode="password_toggle"
                            app:endIconTint="@color/white"
                            app:startIconDrawable="@drawable/baseline_password_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/re_password_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/edit_txt_style"
                            android:hint="@string/con_password"
                            app:endIconMode="password_toggle"
                            app:endIconTint="@color/white"
                            app:startIconDrawable="@drawable/baseline_password_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/re_conferm_password_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/signup_btn"
                            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:backgroundTint="@color/white"
                            android:text="@string/sign_up"
                            app:icon="@drawable/baseline_arrow_forward_24"
                            app:iconGravity="end" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView8"
                                style="@style/normal_txt"
                                android:text="@string/alrady" />

                            <TextView
                                android:id="@+id/signIn_txt_btn"
                                style="@style/normal_txt"
                                android:text="@string/sing_in" />
                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>