<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignIn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_gray"
            android:backgroundTint="@color/main_gray">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/noteflow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.459"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                style="@style/app_name_style" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:text="@string/sing_in"
                            style="@style/heder_titel" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/edit_txt_style"

                            android:hint="@string/email"
                            app:startIconDrawable="@drawable/baseline_email_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/edit_txt_style"
                            app:endIconMode="password_toggle"
                            app:endIconTint="@color/white"
                            android:hint="@string/password"
                            app:startIconDrawable="@drawable/baseline_password_24">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:textColorLink="@color/white" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/for_pass"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Button
                                android:id="@+id/signin_btn"
                                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:backgroundTint="@color/white"
                                android:text="@string/sing_in"
                                android:textColor="@color/black"
                                app:cornerRadius="20dp"
                                app:icon="@drawable/baseline_arrow_forward_24"
                                app:iconGravity="end"
                                app:iconTint="@color/black"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView4"
                                android:text="@string/do_have_ac"
                                style="@style/normal_txt" />

                            <TextView
                                android:id="@+id/regester_btn"
                                android:text="@string/regester"
                                style="@style/normal_txt" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/google_btn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"

                            android:layout_margin="15dp"
                            android:src="@drawable/ic_google" />

                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>