<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="note"
            type="io.github.noteflow.Note" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_gray">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/app_menu"
                app:navigationIcon="@drawable/baseline_arrow_back_24"

                app:title="@string/app_name"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/title"
            app:boxBackgroundColor="@color/main_gray"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_txt"
                android:text="@{note.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/edit_txt_style"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:hint="@string/content"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filledTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_content_txt"
                android:text="@{note.content}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/word_rad_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/home_rad_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/yollu_col_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/yollu"
                app:cardCornerRadius="40dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/red_col_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="40dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/blue_col_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="40dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/white_col_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>